--- a/{{cookiecutter.project_slug}}/requirements_dev.txt
+++ b/{{cookiecutter.project_slug}}/requirements_dev.txt
@@ -14,3 +14,5 @@ pytest==4.6.5
 pytest-runner==5.1{% endif %}
 {% if cookiecutter.use_black == 'y' -%}
 black==19.10b0{% endif %}
+pip-tools==5.1.2
+pre-commit==2.3.0
