--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -1,4 +1,4 @@
-.PHONY: clean clean-test clean-pyc clean-build docs help
+.PHONY: clean clean-test clean-pyc clean-build docs help reqs
 .DEFAULT_GOAL := help
 
 define BROWSER_PYSCRIPT
@@ -98,3 +98,8 @@ dist: clean ## builds source and wheel package
 
 install: clean ## install the package to the active Python's site-packages
 	python setup.py install
+
+reqs: requirements_dev.txt
+
+requirements_dev.txt: requirements_dev.in
+	pip-compile $<
