--- a/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
@@ -8,7 +8,19 @@ repos:
 
 {% if cookiecutter.use_black == 'y' %}
   - repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 19.10b0
     hooks:
       - id: black
+        name: Format code with black
 {% endif %}
+
+  - repo: https://github.com/jazzband/pip-tools
+    rev: 5.1.2
+    hooks:
+      - id: pip-compile
+        name: Generate requirements.txt
+        files: ^(setup\.py|requirements\.txt)$
+      - id: pip-compile
+        name: Generate requirements_dev.txt
+        files: ^requirements_dev\.(in|txt)$
+        args: [ requirements_dev.in ]
